Changed landing page of logo.

--- a/first-project.html
+++ b/first-project.html
@@ -6,7 +6,7 @@
 </head>
 <div class="navbar">
   <a href="#" class="logo">I</a>
-  <a href="https://www.theironyard.com/" target="_blank"><span style="font-weight: bold">Iron News</span></a>
+  <a href="https://www.google.com/" target="_blank"><span style="font-weight: bold">Iron News</span></a>
   <a href="#">new</a>  |
   <a href="#">comments</a>  |
   <a href="#">show</a>  |
