Adding HTML with no HTML styling.

--- a/first-project.html
+++ b/first-project.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>First Project</title>
-<link href="style.css" type="stylesheet" />
-</head>
 <div class="navbar">
   <a href="#" class="logo">I</a>
-  <a href="https://www.google.com/" target="_blank"><span style="font-weight: bold">Iron News</span></a>
+  <a href="https://www.theironyard.com/" target="_blank"><span class="heavyweight">Iron News</span></a>
   <a href="#">new</a>  |
   <a href="#">comments</a>  |
   <a href="#">show</a>  |
   <a href="#">ask</a>  |
   <a href="#">jobs</a>  |
   <a href="#">submit</a>
-  <a href="#" style="float:right">login</a>
+  <a href="#" class="login">login</a>
 </div>
 <div class="background">
   <ol>
@@ -144,7 +138,7 @@
       <p class="subscript"> 98 points by rotskoff | hide | <a href="#">323 comments</a></p>
     </li>
   </ol>
-  <p style="margin:0; padding:15px 0 15px 55px"><a href="#">More</a></p>
+  <p class="moreBtn"><a href="#">More</a></p>
 </div>
 <hr class="background">
 <footer class="background">
@@ -159,4 +153,3 @@
   <a href="#">Contact</a>
   <p class="search">Search: <input type="text"/></p>
 </footer>
-</html>
