Updated the horizontal line from HTML styling to CSS.

--- a/first-project.html
+++ b/first-project.html
@@ -140,7 +140,7 @@
   </ol>
   <p class="moreBtn"><a href="#">More</a></p>
 </div>
-<hr class="background">
+<div class="line-break"></div>
 <footer class="background">
   <a href="#">Guidelines</a>  |
   <a href="#">FAQ</a>  |
