Added DOCTYPE, head, link, body tags to code.

--- a/first-project.html
+++ b/first-project.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<head>
+  <title>My First Project</title>
+  <link rel="stylesheet" href="Style.css"/>
+</head>
+<body>
 <div class="navbar">
   <a href="#" class="logo">I</a>
   <a href="https://www.theironyard.com/" target="_blank"><span class="heavyweight">Iron News</span></a>
@@ -153,3 +159,4 @@
   <a href="#">Contact</a>
   <p class="search">Search: <input type="text"/></p>
 </footer>
+</body>
