Added html tags.

--- a/first-project.html
+++ b/first-project.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>My First Project</title>
   <link rel="stylesheet" href="Style.css"/>
@@ -160,3 +161,4 @@
   <p class="search">Search: <input type="text"/></p>
 </footer>
 </body>
+</html>
